clean up folders

--- a/Test/TestSound.ipynb
+++ b/Test/TestSound.ipynb
@@ -1,25 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is for basic speech recognition testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting SpeechRecognition\n",
-      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/26/e1/7f5678cd94ec1234269d23756dbdaa4c8cfaed973412f88ae8adf7893a50/SpeechRecognition-3.8.1-py2.py3-none-any.whl (32.8MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 32.8MB 868kB/s ta 0:00:011\n",
-      "\u001b[?25hInstalling collected packages: SpeechRecognition\n",
-      "Successfully installed SpeechRecognition-3.8.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install SpeechRecognition\n",
-    "!pip install PocketSphinx"
+    "# !pip install SpeechRecognition\n",
+    "# !pip install PocketSphinx\n",
+    "# !pip install pydub"
    ]
   },
   {
@@ -28,7 +24,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import speech_recognition as sr"
+    "import speech_recognition as sr\n",
+    "from pydub import AudioSegment"
    ]
   },
   {
@@ -62,24 +59,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "harvard = sr.AudioFile('../Project/Data/NCE/2/1.wav')\n",
+    "with harvard as source:\n",
+    "    audio = r.record(source)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sphinx this they'll smell of old we're lingers\n",
-      "Google the stale smell of old beer lingers\n"
+      "Sphinx: bless him on a private conversation first listen and then answer the question why did the right ear complained to the people behind him last week i went to the theater i had a very good seats the play was very interesting i did not enjoy it a young man in the young woman were sitting behind me they were talking loudly i got very angry i could not hear the actors i turned round i looked at the man in the woman angrily they did not pay any attention in the end i could not bear it i turned round again i can't hear own word i said angrily it's none of your business the young man said rudely this is a private conversation\n"
      ]
     }
    ],
    "source": [
-    "harvard = sr.AudioFile('harvard.wav')\n",
-    "with harvard as source:\n",
-    "    audio = r.record(source, duration=4)\n",
-    "print(\"Sphinx:\", r.recognize_sphinx(audio))\n",
-    "print(\"Google:\", r.recognize_google(audio))"
+    "print(\"Sphinx:\", r.recognize_sphinx(audio))"
    ]
   },
   {
