--- a/Project/DownloadNPRconv.ipynb
+++ b/Project/DownloadNPRconv.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For NPR conversation audio downloads\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -378,9 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 96/96 [29:19<00:00, 18.33s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "path = \"Data/NPR_conv/\"\n",
     "bigdic = {}\n",
@@ -437,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,20 +472,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dBFS': -20.927292716731948,\n",
-       " 'max_dBFS': -1.1586272649143894,\n",
-       " 'duration': 148.89795918367346,\n",
-       " 'rms': 2945,\n",
-       " 'max': 28676}"
+       "{'dBFS': -20.08738178841199,\n",
+       " 'duration': 1420.0163265306123,\n",
+       " 'max': 32193,\n",
+       " 'max_dBFS': -0.1537697074284698,\n",
+       " 'rms': 3244}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
