--- a/Project/MvpRecordingJun8.ipynb
+++ b/Project/MvpRecordingJun8.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This file records a live audio for 3 mintues; put it in Data/Live; settings below"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
