--- a/Project/SummaryLDA.ipynb
+++ b/Project/SummaryLDA.ipynb
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Explore data cleaning and LAD\n",
+    "# Explore data cleaning and LDA\n",
     "\n",
     "#### See: https://www.machinelearningplus.com/nlp/topic-modeling-python-sklearn-examples/#13compareldamodelperformancescores\n",
     "\n",
