--- a/TempProj/1_DataImportClean.ipynb
+++ b/TempProj/1_DataImportClean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -386,17 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1_DataImportClean.ipynb      5_StatisticalTreatment.ipynb\r\n",
-      "2_DataInspection.ipynb       \u001b[1m\u001b[36mData\u001b[m\u001b[m\r\n",
-      "3_Selection.ipynb            \u001b[1m\u001b[36mModel\u001b[m\u001b[m\r\n",
-      "4_Analysis.ipynb             \u001b[1m\u001b[36mPlot\u001b[m\u001b[m\r\n"
+      "1_DataImportClean.ipynb      \u001b[1m\u001b[36mData\u001b[m\u001b[m\r\n",
+      "2_DataInspection.ipynb       \u001b[1m\u001b[36mModel\u001b[m\u001b[m\r\n",
+      "3_Selection.ipynb            \u001b[1m\u001b[36mPlot\u001b[m\u001b[m\r\n",
+      "4_Analysis.ipynb             README.md\r\n",
+      "5_StatisticalTreatment.ipynb\r\n"
      ]
     }
    ],
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
